Update ProductServiceImplementation.java
Add logging and clean up ProductServiceImplementation